<resources>
    <string name="app_name">PronuntiApp</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Do not have an account? Sign up!</string>
    <string name="hint_password">Type your password &#8230;</string>
    <string name="hint_cognome">Type your first name &#8230;</string>
    <string name="hint_nome">Type your last name &#8230;</string>
    <string name="hint_email">Type your e-mail &#8230;</string>
    <string name="action_sign_in_short">"Sign in"</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Password must have at least 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_out">Logout</string>
    <string name="invalid_input">Invalid input</string>
    <string name="registered_users">Registered users: %1d.</string>
    <string name="home_page_txt_land">Home</string>
    <string name="assignments_txt_land">Assignments</string>
    <string name="users_table_h1">Email</string>
    <string name="users_table_h2">First name</string>
    <string name="users_table_h3">Last name</string>
    <string name="no_assignments">You have no exercises for today!</string>

    <!-- HomeParent-->
    <string name="continue_as_parent">Continue as a parent</string>
    <string name="continue_as_patient">Continue as a patient</string>
    <!-- -->
    <!-- Appointments -->
    <string name="nav_bar_appointments_txt">Appointments</string>
    <string name="no_appointments">You don\'t have any appointments</string>
    <string name="appointments_land_txt">Appointment list</string>
    <string name="appointment_date_txt">Appointment date</string>
    <string name="appointment_hour_txt">Appointment time</string>
    <string name="btn_add_appointment_txt">Add appointment</string>
    <string name="appointment_check_txt">Appointment approved</string>

    <!-- Assignments -->
    <string name="txt_exercise_name">Exercise name</string>
    <string name="txt_view_assigned_lang">Assignments list</string>
    <string name="txt_no_assigns">The are no assignments for the moment!</string>
    <string name="txtStartDateTxt">Start date</string>
    <string name="txtEndDateTxt">End date</string>
    <string name="txtExerciseTypeTxt">Type</string>

    <!-- HomePatient -->
    <string name="home_patient_txt_land">Welcome back!</string>
    <string name="patient_button_start_txt">START</string>
    <string name="patient_change_char_button_txt">CHANGE CHARACTER</string>
    <string name="patient_top_button_txt">RANKINGS</string>
    <!-- ChangeCharacter-->
    <string name="change_character_txt">Choose your character</string>
    <string name="patient_points_txt">Your points</string>
    <!-- Rankings -->
    <string name="txt_rankings_land">RANKINGS</string>
    <string name="txt_rankings_position">Rank</string>
    <string name="txt_rankings_user">User</string>
    <string name="txt_rankings_points">Points</string>

    <!-- ExerciseReward -->
    <string name="txt_reward_land">Reward:</string>
    <string name="txt_earned_points">You earned 2 points!</string>
    <!--  -->

    <!-- ChooseExercise -->
    <string name="txt_choose_exercise">Move towards an enemy to begin exercises!</string>
    <!--  -->

    <!-- IncorrectAnswer -->
    <string name="txt_incorrect_answer">Unfortunately the answer provided is wrong! You have not received any reward.</string>
    <!--  -->

    <!-- PlayImageExercise -->
    <string name="txt_img_ex_instructions">Press and hold the icon to reply</string>
    <!--  -->

    <!-- PlayImageReconExercise -->
    <string name="txt_image_recon_instructions">Ask your character for help and select the correct image</string>
    <!--  -->

    <!-- PlayAudioExercise -->
    <string name="txt_audio_ex_instructions">Fight the enemy and record the response by holding down the icon</string>
    <!--  -->

    <!-- Permissions -->
    <string name="permission_not_granted"> not allowed. Activate it from settings to use the app.</string>

    <!-- AssignmentAnswers -->
    <string name="txt_assignment_answer_date">Answered</string>
    <string name="txt_assignment_answers_land">Recorded responses</string>
    <string name="txt_assignment_answer_correct">Correct answer</string>
    <string name="txt_assignment_btn_check">Mark as completed</string>
    <string name="audio_exercise_play">Play</string>
    <string name="audio_exercise_stop">Stop</string>
    <!--  -->


    <!--ParentHome -->
    <string name="txt_no_appointments">You don\'t have any scheduled appointments.</string>
    <string name="txt_scheduled_appointments"> scheduled appointments.</string>
    <string name="txt_welcome_back">Welcome back</string>
    <string name="txt_no_assignments">There are no assignments scheduled.</string>
    <string name="txt_scheduled_assignments">assignments to do.</string>
    <!-- -->

    <!-- MainActivity -->
    <string name="access_type">Access type</string>
    <string name="ask_access_type">Do you want to continue as the default user?</string>
    <string name="access_default_ok">Yes</string>
    <string name="access_default_no">No</string>
    <string name="txt_wait">Wait for default user setup &#8230;</string>
    <!-- -->
</resources>