<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signup"
    android:fillViewport="true"
    android:clipChildren="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/appicon_nobg" />

        <EditText
            android:id="@+id/editTextEmailAddressR"
            android:layout_width="266dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPasswordR"
            android:layout_width="266dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextFName"
            android:layout_width="266dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_cognome"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextLName"
            android:layout_width="265dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_nome"
            android:inputType="text" />

        <Button
            android:id="@+id/registerButtonR"
            android:layout_width="154dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/action_sign_up" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>