<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/naturelandscape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:shadowColor="@color/black"
            android:shadowRadius="20"
            android:text="@string/home_patient_txt_land"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="38sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="#4CAF50">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonStart"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/patient_button_start_txt"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonChangeCharacter"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/patient_change_char_button_txt"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonTopList"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/patient_top_button_txt"
                    android:textSize="16sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>