<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/naturelandscape"
    tools:context=".activities.PatientActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="355dp"
        android:layout_height="403dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:layout_margin="10dp"
                android:textSize="16sp"
                android:text="@string/patient_button_start_txt" />
            <Button
                android:layout_margin="10dp"
                android:id="@+id/buttonChangeCharacter"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:textSize="16sp"
                android:text="@string/patient_change_char_button_txt" />
            <Button
                android:id="@+id/buttonTopList"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:textSize="16sp"
                android:text="@string/patient_top_button_txt" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowRadius="20"
        android:text="@string/home_patient_txt_land"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

</androidx.constraintlayout.widget.ConstraintLayout>