<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nesetRankings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/naturelandscape"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:shadowColor="@color/black"
            android:shadowRadius="20"
            android:text="@string/txt_rankings_land"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="350dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="#4CAF50">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginTop="40dp"
                        android:layout_marginStart="40dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:shadowColor="@color/black"
                        android:shadowRadius="20"
                        android:text="@string/txt_rankings_position"
                        android:textColor="@color/white"
                        app:drawableStartCompat="@drawable/icon_rank"
                        android:drawablePadding="5dp"
                        android:textSize="18sp"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:shadowColor="@color/black"
                        android:shadowRadius="20"
                        android:text="@string/txt_rankings_user"
                        app:drawableStartCompat="@drawable/icon_face"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:shadowColor="@color/black"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="40dp"
                        android:shadowRadius="20"
                        android:text="@string/txt_rankings_points"
                        app:drawableStartCompat="@drawable/icon_currency"
                        android:drawablePadding="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        tools:ignore="RtlHardcoded" />
                </FrameLayout>

                <ListView
                    android:id="@+id/listViewRankings"
                    android:layout_width="310dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:padding="20dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>